--- a/AngularJSDemo/AngularJSDemo/Views/Home/LogItems.cshtml
+++ b/AngularJSDemo/AngularJSDemo/Views/Home/LogItems.cshtml
@@ -26,7 +26,7 @@
 
         <!-- Modal -->
         <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-vertical-centered">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -65,19 +65,38 @@
 {
     <link rel="stylesheet" type="text/css" href="http://angular-ui.github.com/ng-grid/css/ng-grid.css" />
 
+
     <style>
+
         .gridStyle {
             border: 1px solid rgb(212,212,212);
             width: 100%;
             height: 300px;
         }
-    </style>
 
-@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
-<script type="text/javascript" src="http://angular-ui.github.com/ng-grid/lib/ng-grid.debug.js"></script>*@
+        .modal-content 
+        {
+            margin-left: -150px;
+            }
+
+        /* Styles go here */
+.list{
+  height: 200px; 
+}
+
+button[disabled="disabled"]{
+  background: #696969;
+}
+    .modal-vertical-centered {
+  transform: translate(0, 45%) !important;
+  -ms-transform: translate(0, 45%) !important; /* IE 9 */
+  -webkit-transform: translate(0, 45%) !important; /* Safari and Chrome */
+}
+
+    </style>
 
     <script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/ng-grid.min.js"></script>
     <script src="~/Scripts/Controllers/NGController.js"></script>
+
 }
