--- a/AngularJSDemo/AngularJSDemo/Views/Shared/_Layout.cshtml
+++ b/AngularJSDemo/AngularJSDemo/Views/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -35,9 +36,8 @@
         </footer>
     </div>
 
-    @*@Scripts.Render("~/bundles/jquery")*@
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/bootstrap.min.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
