--- a/AngularJSDemo/AngularJSDemo/Views/Home/LogItems.cshtml
+++ b/AngularJSDemo/AngularJSDemo/Views/Home/LogItems.cshtml
@@ -7,7 +7,7 @@
 <div class="row" ng-app="myApp">
     <div ng-controller="MyCtrl">
 
-        <table class="table">
+        @*<table class="table">
             <tr>
                 <td style="width:50%" align="left">
                     <input type="text" class="form-control" placeholder="" ng-model="filterText" />
@@ -15,7 +15,7 @@
                 <td>
                     <a class="btn btn-primary" ng-click="refresh()" >Search</a>
                 </td>
-        </table>
+        </table>*@
 
         <div class="gridStyle" ng-grid="gridOptions"></div>
 
